--- a/src/app/index.css
+++ b/src/app/index.css
@@ -13,12 +13,17 @@
     all: initial;
 }
 
+* {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
 body {
     font-family: 'Inter', sans-serif;
 
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
 
     background-color: var(--main-bg-color);
     color: white;
